--- a/app/views/pages/parcours.html.erb
+++ b/app/views/pages/parcours.html.erb
@@ -68,6 +68,7 @@
                                     <i>heures de jeu</i>
                                 </span>
                                 <p class="datatron-item-content">Comme dans tout bon escape game qui se respecte, votre mission est limitée dans le temps. Nous vous donnons 2 heures pour la réaliser. <em>À vos marques ! Prêts ? Partez !</em></p>
+                                <%= link_to "Connaître nos horaires de jeu", horaires_path, class: "cta-link" %>
                             </li>
                             <li class="datatron-item">
                                 <span class="datatron-item-title-large">
