ajout lien linkedin

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -34,6 +34,7 @@
             <span>Suivez-nous</span>
             <p><%= link_to "Facebook", 'https://www.facebook.com/lesmysteresdebourges' %></p>
             <p><%= link_to "Instagram", 'https://www.instagram.com/lesmysteresdebourges' %></p>
+            <p><%= link_to "LinkedIn", 'https://www.linkedin.com/company/lesmysteresdebourges/' %></p>
         </div>
     </div>
 </footer>
